styling: add more styling

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script defer src="/bundle.js"></script>
   </head>
   <body>
