feat: homepage about and how to

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,9 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Priceless</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@100&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins:wght@100&family=Shadows+Into+Light&family=Tajawal:wght@200&display=swap"
       rel="stylesheet"
     />
     <link
